overflow-x - issue solved

--- a/css/menu.css
+++ b/css/menu.css
@@ -7,6 +7,8 @@ body {
     position: relative;
     z-index: 2;
     /*overflow: hidden;*/
+}
+html{
     overflow-x: hidden;
 }
 
